Add --reads org.eclipse.jetty.logging to surefire config