@@ -22,7 +22,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <!-- TODO -->
+          <argLine>
+            @{argLine} ${jetty.surefire.argLine} --add-reads org.eclipse.jetty.ee10.proxy=org.eclipse.jetty.logging
+          </argLine>
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
